force-app/main/default/objects/Comentarios__c/Comentarios__c.object-meta.xml
<CustomObject>
    <description>Comentarios de clientes existentes</description>
    <label>Comentario</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>ID Comentario</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comentarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>