force-app/main/default/objects/Comentarios__c/fields/Comentario__c.field-meta.xml
<CustomField>
    <fullName>Comentario__c</fullName>
    <label>Comentario</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>