force-app/main/default/objects/Comentarios__c/fields/Cuenta_relacionada__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Comentarios</relationshipLabel>
    <relationshipName>Comentarios</relationshipName>
    <type>Lookup</type>
</CustomField>