force-app/main/default/objects/Comentarios__c/fields/Fecha_creaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_creaci_n__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Fecha creación</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>