force-app/main/default/objects/Comentarios__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bajas</fullName>
            </value>
            <value>
                <fullName>Cambio cuenta</fullName>
            </value>
            <value>
                <fullName>Contrato</fullName>
            </value>
            <value>
                <fullName>Expediente Abierto</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Pago anticipado</fullName>
            </value>
            <value>
                <fullName>Pago cliente</fullName>
            </value>
            <value>
                <fullName>Post-venta</fullName>
            </value>
            <value>
                <fullName>Precio SPOT</fullName>
            </value>
            <value>
                <fullName>Suministro</fullName>
            </value>
            <value>
                <fullName>Zona almacenamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>