force-app/main/default/objects/Comentarios__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fecha_creaci_n__c</columns>
    <columns>Tipo__c</columns>
    <columns>Comentario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tipo__c</field>
        <operation>equals</operation>
        <value>Cambio cuenta</value>
    </filters>
    <label>Todos</label>
    <language>es</language>
</ListView>