force-app/main/default/objects/Comentarios__c/listViews/Cola_Telper_Comentarios.listView-meta.xml
<ListView>
    <fullName>Cola_Telper_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Cola Telper</label>
    <queue>Cola_Telper</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>