force-app/main/default/objects/Comentarios__c/listViews/ITAC_Comentarios.listView-meta.xml
<ListView>
    <fullName>ITAC_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>ITAC</label>
    <queue>ITAC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>