force-app/main/default/objects/Comentarios__c/listViews/Legal_Comentarios.listView-meta.xml
<ListView>
    <fullName>Legal_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal</label>
    <queue>Legal</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>