force-app/main/default/objects/Comentarios__c/listViews/MPGAS_Comentarios.listView-meta.xml
<ListView>
    <fullName>MPGAS_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>MPGAS</label>
    <queue>MPGAS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>