force-app/main/default/objects/Comentarios__c/listViews/Primagas_Canalizado_Comentarios.listView-meta.xml
<ListView>
    <fullName>Primagas_Canalizado_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas ATC Canalizado</label>
    <queue>Primagas_ATC_Canalizado</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>