force-app/main/default/objects/Comentarios__c/listViews/Primagas_cobros_Comentarios.listView-meta.xml
<ListView>
    <fullName>Primagas_cobros_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas Cobros</label>
    <queue>Primagas_Cobros</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>