force-app/main/default/objects/Comentarios__c/listViews/Primagas_Comercial_Comentarios.listView-meta.xml
<ListView>
    <fullName>Primagas_Comercial_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas Comercial</label>
    <queue>Primagas_Comercial</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>