force-app/main/default/objects/Comentarios__c/listViews/Primagas_Facturas_Cliente_Comentarios.listView-meta.xml
<ListView>
    <fullName>Primagas_Facturas_Cliente_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas Facturas Cliente</label>
    <queue>Primagas_Facturas_Cliente</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>