force-app/main/default/objects/Comentarios__c/listViews/Primagas_Granel_Comentarios.listView-meta.xml
<ListView>
    <fullName>Primagas_Granel_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas ATC Granel</label>
    <queue>Primagas_ATC_Granel</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>