force-app/main/default/objects/Comentarios__c/listViews/Primagas_Instalaciones_Comentarios.listView-meta.xml
<ListView>
    <fullName>Primagas_Instalaciones_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas Instalaciones</label>
    <queue>Primagas_Instalaciones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>