force-app/main/default/objects/Comentarios__c/listViews/Primagas_Post_Venta_Comentarios.listView-meta.xml
<ListView>
    <fullName>Primagas_Post_Venta_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas Post Venta</label>
    <queue>Primagas_Post_Venta</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>