force-app/main/default/objects/Comentarios__c/listViews/Primagas_Revisiones_Comentarios.listView-meta.xml
<ListView>
    <fullName>Primagas_Revisiones_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas Revisiones</label>
    <queue>Primagas_Revisiones</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>