force-app/main/default/objects/Comentarios__c/listViews/PrimagasLogistica_Comentarios.listView-meta.xml
<ListView>
    <fullName>PrimagasLogistica_Comentarios</fullName>
    <filterScope>Queue</filterScope>
    <label>Primagas Logistica</label>
    <queue>PrimagasLogistica</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>